quorum/test/tests/TypeChecker/Pass/ImpAssignNumberInteger.quorum
integer i = 5
number n = i