quorum/test/tests/TypeChecker/Fail/ImpAssignIntObjInteger.quorum
integer i = 5
Integer int = i